--- a/frontend/unity-spa/features/admissions/applicants/list.html
+++ b/frontend/unity-spa/features/admissions/applicants/list.html
@@ -22,7 +22,7 @@
 
   <!-- Filters -->
   <div class="bg-white shadow-sm border border-gray-200 rounded-lg p-4">
-    <div class="grid grid-cols-1 md:grid-cols-6 gap-3">
+    <div class="grid grid-cols-1 md:grid-cols-7 gap-3">
       <div class="md:col-span-2">
         <label class="block text-sm font-medium text-gray-700 mb-1">Search</label>
         <input type="text" ng-model="vm.filters.search" placeholder="Name, email, mobile"
@@ -42,8 +42,38 @@
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">Campus</label>
-        <input type="text" ng-model="vm.filters.campus" placeholder="e.g. Cebu, Makati"
-               class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500"/>
+        <div class="relative">
+          <input type="text"
+                 class="block w-full rounded border border-gray-300 bg-white px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+                 pui-autocomplete
+                 ng-model="vm.filters.campus"
+                 pui-source="vm.campuses"
+                 pui-item-key="id"
+                 pui-label="item.campus_name"
+                 pui-max-results="20"
+                 pui-on-select="vm.onCampusChange()"
+                 placeholder="Search campus..."/>
+        </div>
+        <div class="mt-1 text-xs text-gray-500 flex items-center space-x-2">
+          <button type="button"
+                  class="text-blue-600 hover:underline"
+                  ng-click="vm.filters.campus=''; vm.onCampusChange()">
+            All
+          </button>
+          <span>Defaults to the globally selected campus.</span>
+        </div>
+      </div>
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1">Term</label>
+        <select ng-model="vm.filters.syid"
+                ng-options="t.intID as vm.termLabel(t) for t in vm.terms"
+                ng-change="vm.onTermChange()"
+                class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+          <option value="">All</option>
+        </select>
+        <div class="mt-1 text-xs text-gray-500">
+          <span>Select academic term.</span>
+        </div>
       </div>
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">Date From</label>
@@ -108,11 +138,11 @@
             <td class="px-4 py-2">
               <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium"
                     ng-class="{
-                      'bg-gray-100 text-gray-800': (r.status || 'new') === 'new',
-                      'bg-yellow-100 text-yellow-800': r.status === 'reserved' || r.status === 'interviewed',
-                      'bg-green-100 text-green-800': r.status === 'paid' || r.status === 'enrolled'
+                      'bg-gray-100 text-gray-800': (r.status || 'New') === 'New',
+                      'bg-yellow-100 text-yellow-800': r.status === 'Reserved' || r.status === 'Interviewed',
+                      'bg-green-100 text-green-800': r.status === 'paid' || r.status === 'Enrolled'
                     }">
-                {{ r.status || 'new' }}
+                {{ r.status || 'New' }}
               </span>
             </td>
             <td class="px-4 py-2 text-sm text-gray-700">
